# Chess

./: AIPlayer.cpp  AIPlayer.h  AssetLoader.cpp  AssetLoader.h  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessPieceInstance.cpp  ChessPieceInstance.h  Cleanup.h  Configuration.cpp  Configuration.h  CorruptionDetector.h  GameMode.cpp  GameMode.h  HeatmapWindow.cpp  HeatmapWindow.h  IBehaviour.cpp  IBehaviour.h  IRenderable.cpp  IRenderable.h  InputHandler.cpp  InputHandler.h  InputHandlerEventStream.cpp  InputHandlerEventStream.h  Logging.h  MemoryWatcher.h  PieceBehaviour.cpp  PieceBehaviour.h  PieceController.cpp  PieceController.h  RenderContext.cpp  RenderContext.h  config.json  generateStats.sh  main.cpp  readme.md  stats.md
assets/gamemodes/: knight_pawn_testing.json  movetesting.json  pawn_and_queen.json  pawns.json  standard_game.json
assets/piecedefs/: bishop.json  king.json  knight.json  pawn.json  queen.json  rook.json
